--- a/apps/docs/content/components/FAQ/react.mdx
+++ b/apps/docs/content/components/FAQ/react.mdx
@@ -37,13 +37,9 @@ import {FAQ, FAQGroup} from '@primer/react-brand'
           All GitHub for Startups companies receive up to 20 seats of GitHub
           Enterprise for free for year one and 50% off year two. Learn more
           about the features and capabilities of GitHub Enterprise{' '}
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             here
-          </InlineLink>
+          </a>
           .
         </p>
       </FAQ.Answer>
@@ -87,13 +83,9 @@ import {FAQ, FAQGroup} from '@primer/react-brand'
         <p>
           If you’re not currently eligible for the GitHub for Startups but would
           like to try GitHub Enterprise, please feel to sign up for a trial
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             here
-          </InlineLink>.
+          </a>.
         </p>
       </FAQ.Answer>
     </FAQ.Item>
@@ -107,13 +99,9 @@ import {FAQ, FAQGroup} from '@primer/react-brand'
           to apply for the GitHub for Startups program.
         </p>
         <p>
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             Apply here
-          </InlineLink>
+          </a>
           .
         </p>
       </FAQ.Answer>
@@ -215,13 +203,9 @@ const App = () => {
       answer: (
         <p>
           Vestibulum at dolor justo.{' '}
-          <InlineLink
-            href="https://www.github.com"
-            target="_blank"
-            rel="noreferrer"
-          >
+          <a href="https://www.github.com" target="_blank" rel="noreferrer">
             Curabitur
-          </InlineLink>{' '}
+          </a>{' '}
           dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
           interdum ligula at nisi rhoncus malesuada et non eros.
         </p>
@@ -233,13 +217,9 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <InlineLink
-              href="https://www.github.com"
-              target="_blank"
-              rel="noreferrer"
-            >
+            <a href="https://www.github.com" target="_blank" rel="noreferrer">
               Curabitur
-            </InlineLink>{' '}
+            </a>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
             interdum ligula at nisi rhoncus malesuada et non eros.
           </p>
@@ -256,13 +236,9 @@ const App = () => {
         <React.Fragment>
           <p>
             Vestibulum at dolor justo.{' '}
-            <InlineLink
-              href="https://www.github.com"
-              target="_blank"
-              rel="noreferrer"
-            >
+            <a href="https://www.github.com" target="_blank" rel="noreferrer">
               Curabitur
-            </InlineLink>{' '}
+            </a>{' '}
             dictum feugiat elit, vitae vestibulum orci vestibulum sed. Donec
             interdum ligula at nisi rhoncus malesuada et non eros.
           </p>
