add disable / toggle of animation effect and fix arrow

--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -221,11 +221,12 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 
 ### Card
 
-| name        | type      | default     | required | description                                 |
-| ----------- | --------- | ----------- | -------- | ------------------------------------------- |
-| `href`      | `string`  |             | `true`   | URL to the card content                     |
-| `ctaText`   | `string`  | `Read more` | `false`  | Label of the link at the bottom of the Card |
-| `hasBorder` | `boolean` | `false`     | `false`  | A flag used to provide a border to the Card |
+| name               | type      | default     | required | description                                                      |
+| ------------------ | --------- | ----------- | -------- | ---------------------------------------------------------------- |
+| `ctaText`          | `string`  | `Read more` | `false`  | Label of the link at the bottom of the card                      |
+| `disableAnimation` | `boolean` | `false`     | `false`  | A flag to disable the default hover animation effect of the card |
+| `hasBorder`        | `boolean` | `false`     | `false`  | A flag used to provide a border to the card                      |
+| `href`             | `string`  |             | `true`   | URL to the card content                                          |
 
 ### Card.Image
 
