--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -127,6 +127,42 @@ Use the `Image` component to add an image to the `Card`. The `Image` component i
 </Card>
 ```
 
+### Torchlight effect
+
+`Card` components in dark mode feature a unique "torchlight" effect.
+
+The color of the lit area corrosponds to the nearest active, primary accent color. The color can modified by changing the value of the respective CSS variable.
+
+```jsx live
+<ThemeProvider colorMode="dark">
+  <Box padding="spacious" backgroundColor="default">
+    <Stack direction="horizontal" padding="none">
+      <Card href="https://github.com">
+        <Card.Icon icon={CopilotIcon} color="pink" hasBackground />
+        <Card.Heading>Code search & code view</Card.Heading>
+        <Card.Description>
+          Enables you to rapidly search, navigate, and understand code, right
+          from GitHub.com.
+        </Card.Description>
+      </Card>
+      <Card
+        href="https://github.com"
+        style={{
+          ['--brand-color-accent-primary']: 'var(--base-color-scale-lime-2)',
+        }}
+      >
+        <Card.Icon icon={ZapIcon} color="lime" hasBackground />
+        <Card.Heading>Code search & code view</Card.Heading>
+        <Card.Description>
+          Enables you to rapidly search, navigate, and understand code, right
+          from GitHub.com.
+        </Card.Description>
+      </Card>
+    </Stack>
+  </Box>
+</ThemeProvider>
+```
+
 ### Image and Label
 
 Combine `Image` and `Label` when you need to add more metadata or context to the `Card`. Use either the `Icon` or `Image` as the primary visual context, but not both.
@@ -185,11 +221,12 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 
 ### Card
 
-| name        | type      | default     | required | description                                 |
-| ----------- | --------- | ----------- | -------- | ------------------------------------------- |
-| `href`      | `string`  |             | `true`   | URL to the card content                     |
-| `ctaText`   | `string`  | `Read more` | `false`  | Label of the link at the bottom of the Card |
-| `hasBorder` | `boolean` | `false`     | `false`  | A flag used to provide a border to the Card |
+| name               | type      | default     | required | description                                                      |
+| ------------------ | --------- | ----------- | -------- | ---------------------------------------------------------------- |
+| `ctaText`          | `string`  | `Read more` | `false`  | Label of the link at the bottom of the card                      |
+| `disableAnimation` | `boolean` | `false`     | `false`  | A flag to disable the default hover animation effect of the card |
+| `hasBorder`        | `boolean` | `false`     | `false`  | A flag used to provide a border to the card                      |
+| `href`             | `string`  |             | `true`   | URL to the card content                                          |
 
 ### Card.Image
 
