revert regular and heavy breaking changes

--- a/apps/docs/content/components/Heading/react.mdx
+++ b/apps/docs/content/components/Heading/react.mdx
@@ -72,8 +72,8 @@ Use the `weight` prop to override the default visual appearance if required.
 
 ```jsx live
 <>
-  <Heading as="h3" weight="black">
-    black
+  <Heading as="h3" weight="heavy">
+    heavy
   </Heading>
   <Heading as="h3" weight="extrabold">
     extrabold
@@ -87,8 +87,8 @@ Use the `weight` prop to override the default visual appearance if required.
   <Heading as="h3" weight="medium">
     medium
   </Heading>
-  <Heading as="h3" weight="regular">
-    regular
+  <Heading as="h3" weight="normal">
+    normal
   </Heading>
   <Heading as="h3" weight="light">
     light
@@ -100,7 +100,7 @@ Use the `weight` prop to override the default visual appearance if required.
   <Heading
     as="h4"
     weight={{
-      narrow: 'black',
+      narrow: 'heavy',
       regular: 'semibold',
       wide: 'light',
     }}
