--- a/apps/docs/content/components/Text/react.mdx
+++ b/apps/docs/content/components/Text/react.mdx
@@ -91,8 +91,8 @@ Use the `weight` prop to adjust the default visual appearance if required.
 
 ```jsx live
 <>
-  <Text as="p" weight="black">
-    black
+  <Text as="p" weight="heavy">
+    heavy
   </Text>
   <Text as="p" weight="extrabold">
     extrabold
@@ -119,7 +119,7 @@ Use the `weight` prop to adjust the default visual appearance if required.
   <Text
     as="p"
     weight={{
-      narrow: 'black',
+      narrow: 'heavy',
       regular: 'semibold',
       wide: 'light',
     }}
