--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -63,6 +63,12 @@ Section intro can be aligned to the start or center of the page. By default, the
   </Dont>
 </DoDontContainer>
 
+### Emphasized text
+
+Section intro allows for only one portion of the heading to be highlighted. Use strategically to highlight key ideas and guide effectively through a story.
+
+![An image displaying a section intro with emphasized text.](https://github.com/primer/brand/assets/6951037/d583e4f4-7ce6-426d-be08-5afc704ac611)
+
 ## Related components
 
 - [Hero](/components/Hero): Use the hero component to render a full-width banner on a webpage.
