--- a/apps/docs/content/components/EyebrowBanner.mdx
+++ b/apps/docs/content/components/EyebrowBanner.mdx
@@ -23,7 +23,7 @@ import {EyebrowBanner} from '@primer/react-brand'
 
 ### Default
 
-This is the default variant for the eyebrow banner component. It corresponds to the `secondary` variant appearance.
+This is the default variant for the eyebrow banner component.
 
 ```jsx live
 <EyebrowBanner href="http://githubuniverse.com">
