fix missing labels in docs

--- a/apps/docs/content/components/EyebrowBanner.mdx
+++ b/apps/docs/content/components/EyebrowBanner.mdx
@@ -7,6 +7,7 @@ storybook: '/brand/storybook/?path=/story/components-eyebrowbanner--playground'
 description: Use the eyebrow banenr to highlight important information at the top of a page.
 ---
 
+import {Label} from '@primer/react'
 import {StarIcon, CopilotIcon} from '@primer/octicons-react'
 
 import {PropTableValues} from '../../src/components'
