--- a/apps/docs/content/components/Label/react.mdx
+++ b/apps/docs/content/components/Label/react.mdx
@@ -61,10 +61,10 @@ You can add a leading icon to enhance the visual context. It is recommended you 
 
 ```jsx live
 <Stack direction="horizontal" alignItems="flex-start" padding="none">
-  <Label color="yellow" leadingVisual={StarIcon}>
+  <Label color="yellow" leadingVisual={<StarIcon />}>
     Starred
   </Label>
-  <Label color="blue-purple" leadingVisual={CopilotIcon}>
+  <Label color="blue-purple" leadingVisual={<CopilotIcon />}>
     Copilot
   </Label>
 </Stack>
