--- a/apps/docs/content/getting-started/animation.mdx
+++ b/apps/docs/content/getting-started/animation.mdx
@@ -178,7 +178,7 @@ Alternatively, use `delay` to stagger animations on adjacent elements if this fe
     >
       <Animate animate="scale-in-up">
         <Card href="https://github.com">
-          <Card.Icon icon={CopilotIcon} color="indigo" hasBackground />
+          <Card.Icon icon={<CopilotIcon />} color="indigo" hasBackground />
           <Card.Label>Limited</Card.Label>
           <Card.Heading>
             Collaboration is the key to DevOps success
