fixes for eyebrow banner

--- a/apps/docs/content/components/EyebrowBanner.mdx
+++ b/apps/docs/content/components/EyebrowBanner.mdx
@@ -136,7 +136,7 @@ An optional `hasBackground` prop can be used to fill the surrounding circle with
 ```jsx live
 <Stack>
   <EyebrowBanner href="/">
-    <EyebrowBanner.Visual icon={StarIcon} color="blue" hasBackground />
+    <EyebrowBanner.Visual icon={<StarIcon />} color="blue" hasBackground />
     <EyebrowBanner.Heading>
       GitHub Universe: Dive in to AI, security, and DevEx
     </EyebrowBanner.Heading>
@@ -145,7 +145,7 @@ An optional `hasBackground` prop can be used to fill the surrounding circle with
     </EyebrowBanner.SubHeading>
   </EyebrowBanner>
   <EyebrowBanner href="/">
-    <EyebrowBanner.Visual icon={CopilotIcon} color="blue" />
+    <EyebrowBanner.Visual icon={<CopilotIcon />} color="blue" />
     <EyebrowBanner.Heading>
       GitHub Copilot now available for Business
     </EyebrowBanner.Heading>
