fix typo in eyebrow banner docs

--- a/apps/docs/content/components/EyebrowBanner.mdx
+++ b/apps/docs/content/components/EyebrowBanner.mdx
@@ -4,7 +4,7 @@ status: Experimental
 a11yReviewed: false
 source: https://github.com/primer/brand/blob/main/packages/react/src/EyebrowBanner/EyebrowBanner.tsx
 storybook: '/brand/storybook/?path=/story/components-eyebrowbanner--playground'
-description: Use the eyebrow banenr to highlight important information at the top of a page.
+description: Use the eyebrow banner to highlight important information at the top of a page.
 ---
 
 import {Label} from '@primer/react'
