--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -49,8 +49,7 @@ Two or more rivers can be stacked to guide the user through a set of feautres. W
       src="https://github.com/primer/brand/assets/912236/ff254125-73ae-4838-9ee9-32aac6bcf19b"
     />
     <Caption>
-      Don't stack numerous rivers with 40:60 ratio without alternating left and
-      right alignments.
+      River component stacks create a unit with coherent flow. Here the last item breaks the flow.
     </Caption>
   </Dont>
 </DoDontContainer>
