--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -49,7 +49,7 @@ Two or more rivers can be stacked to guide the user through a set of feautres. W
       src="https://github.com/primer/brand/assets/6951037/169d5c19-67f4-4f15-8e3b-80c877b34af1"
     />
     <Caption>
-      River component stacks create a unit with coherent flow. Here the last item breaks the flow.
+      Don't break the flow in a stack of rivers that would otherwise stay aligned.
     </Caption>
   </Dont>
 </DoDontContainer>
