--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -10,7 +10,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use rivers to showcase features and introduce topics. Rivers are composed of images or videos paired with text content. River's text content includes a heading, body text, and an optional link.
+Use rivers to showcase features and introduce topics. Rivers are composed of images or videos paired alongside text content like headings, paragraphs, and links.
 
 A river’s content should be short and concise, no longer than 3 or 4 sentences and in a single paragraph when possible.
 
