--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -104,7 +104,7 @@ A single river component acts as a section and it should not include any child s
   </Dont>
 </DoDontContainer>
 
-### River Breakout
+### River breakout
 
 A river breakout component has an image that fills the width of the container while providing more space for content such as text and lists.
 
