--- a/apps/docs/content/components/River/index.mdx
+++ b/apps/docs/content/components/River/index.mdx
@@ -110,7 +110,7 @@ A river breakout component has an image that fills the width of the container wh
 
 This is useful when you want to create a highlight which can be used to create more emphasis or simply break a monotonous vertical flow of left/right rivers. It can also be helpful on smaller viewports to avoid stacking two images or two chunks of text from adjacent river components. 
 
-As it's name suggest, a river breakout should not be the first in the stack, it should be in-between two left/right rivers.
+As its name suggest, a river breakout should not be the first in the stack, it should be positioned in-between two standard rivers.
 
 Some examples of when to use a river breakout:
 
