fix missing buttongroup import in docs

--- a/apps/docs/content/components/ButtonGroup/react.mdx
+++ b/apps/docs/content/components/ButtonGroup/react.mdx
@@ -13,7 +13,7 @@ import {ButtonSizes} from '@primer/react-brand'
 import {PropTableValues} from '../../../src/components'
 
 ```js
-import {Button} from '@primer/react-brand'
+import {ButtonGroup, Button} from '@primer/react-brand'
 ```
 
 ## Examples
