add Label child support to Bento and River components

--- a/apps/docs/content/components/River/react.mdx
+++ b/apps/docs/content/components/River/react.mdx
@@ -69,6 +69,7 @@ import {River, RiverBreakout} from '@primer/react-brand'
       />
     </River.Visual>
     <River.Content>
+      <Label>Label</Label>
       <Heading>Heading</Heading>
       <Text>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit
@@ -230,7 +231,7 @@ import {River, RiverBreakout} from '@primer/react-brand'
 
 ### River.Content and RiverBreakout.Content <Label>Required</Label>
 
-[`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) are the only `children` accepted. They can be composed in any order, but their rendered output will always be in a predetermined order.
+[`Label`](https://primer.style/brand/components/Label), [`Text`](https://primer.style/brand/components/Text),[`Heading`](https://primer.style/brand/components/Heading), [`Link`](https://primer.style/brand/components/Link) are the only `children` accepted. They can be composed in any order, but their rendered output will always be in a predetermined order.
 
 | Name        | Type                                                                                                                                                                  | Default | Description                                      |
 | :---------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-----: | :----------------------------------------------- |
