--- a/apps/docs/content/components/UnorderedList/react.mdx
+++ b/apps/docs/content/components/UnorderedList/react.mdx
@@ -48,6 +48,44 @@ import {UnorderedList} from '@primer/react-brand'
 </UnorderedList>
 ```
 
+### `x` variant
+
+```jsx live
+<UnorderedList variant="x">
+  <UnorderedList.Item>
+    Automatic security and version updates
+  </UnorderedList.Item>
+  <UnorderedList.Item>GitHub Security Advisories</UnorderedList.Item>
+  <UnorderedList.Item>Code and secret scanning</UnorderedList.Item>
+  <UnorderedList.Item>Dependency review</UnorderedList.Item>
+  <UnorderedList.Item>
+    Automated authentication and identity management
+  </UnorderedList.Item>
+</UnorderedList>
+```
+
+### Custom colors
+
+```jsx live
+<UnorderedList variant="checked">
+  <UnorderedList.Item leadingVisualFill="var(--brand-color-success-fg)">
+    Automatic security and version updates
+  </UnorderedList.Item>
+  <UnorderedList.Item leadingVisualFill="var(--brand-color-success-fg)">
+    GitHub Security Advisories
+  </UnorderedList.Item>
+  <UnorderedList.Item leadingVisualFill="var(--brand-color-success-fg)">
+    Code and secret scanning
+  </UnorderedList.Item>
+  <UnorderedList.Item leadingVisualFill="var(--brand-color-success-fg)">
+    Dependency review
+  </UnorderedList.Item>
+  <UnorderedList.Item leadingVisualFill="var(--brand-color-success-fg)">
+    Automated authentication and identity management
+  </UnorderedList.Item>
+</UnorderedList>
+```
+
 ## Component props
 
 ### UnorderedList
@@ -55,12 +93,17 @@ import {UnorderedList} from '@primer/react-brand'
 | Name        | Type                                   |  Default  | Description                                                |
 | :---------- | :------------------------------------- | :-------: | :--------------------------------------------------------- |
 | `className` | `string`                               |           | Sets a custom class on the root element                    |
-| `variant`   | `default`, `checked`                   | `default` | Specify alternative leading visual for list items          |
+| `variant`   | `default`, `checked` , `x`             | `default` | Specify alternative leading visual for list items          |
 | `children`  | `React.ReactNode`, `React.ReactNode[]` |           | Content to be displayed within the UnorderedList component |
 
 ### UnorderedList.Item
 
-| Name        | Type                                   |  Default  | Description                                              |
-| :---------- | :------------------------------------- | :-------: | :------------------------------------------------------- |
-| `className` | `string`                               |           | Sets a custom class on the root element                  |
-| `children`  | `React.ReactNode`, `React.ReactNode[]` | `default` | Content to be displayed within the OrderedList component |
+| Name                     | Type                                   |   Default   | Description                                                                                         |
+| :----------------------- | :------------------------------------- | :---------: | :-------------------------------------------------------------------------------------------------- |
+| `className`              | `string`                               |             | Sets a custom class on the root element                                                             |
+| `children`               | `React.ReactNode`, `React.ReactNode[]` |  `default`  | Content to be displayed within the OrderedList component                                            |
+| `leadingVisual`          | `Icon`                                 | `undefined` | Sets a custom leading visual ([Octicon](https://primer.style/foundations/icons/)) for the list item |
+| `leadingVisualFill`      | `string`                               | `undefined` | Sets a custom color value for the leading visual                                                    |
+| `leadingVisualAriaLabel` | `string`                               | `undefined` | Sets `aria-label` on the leading visual icon                                                        |
+
+Also forwards the `variant` prop from the [Text component](/components/Text).
