--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -45,7 +45,7 @@ Ensure the description is concise, keeping it to one paragraph. Use a link to di
 <DoDontContainer>
   <Do>
     <img src="https://github.com/primer/design/assets/175638/f8bd5ed9-d716-40c2-aef6-33979a87784d" />
-    <Caption>Use a short description to introduce the Selection.</Caption>
+    <Caption>Use a short description to introduce the section.</Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/design/assets/175638/c2985d40-94c0-436c-9947-6c98611a0c77" />
