Add card and default layout options

--- a/apps/docs/content/components/PricingCards.mdx
+++ b/apps/docs/content/components/PricingCards.mdx
@@ -275,7 +275,7 @@ Use `PricingCards.FeatureListHeading` to group feature items together.
     </PricingCards.PrimaryAction>
   </PricingCards.Item>
 
-  <PricingCards.Item featured>
+  <PricingCards.Item>
     <PricingCards.Label>Recommended</PricingCards.Label>
     <PricingCards.Heading>Copilot Business</PricingCards.Heading>
     <PricingCards.Description>
@@ -420,7 +420,7 @@ Use `PricingCards.FeatureListItem` with `variant="included"` and `variant="exclu
     </PricingCards.PrimaryAction>
   </PricingCards.Item>
 
-  <PricingCards.Item featured>
+  <PricingCards.Item>
     <PricingCards.Label>Recommended</PricingCards.Label>
     <PricingCards.Heading>Copilot Business</PricingCards.Heading>
     <PricingCards.Description>
