Update stories and docs

--- a/apps/docs/content/components/PricingCards.mdx
+++ b/apps/docs/content/components/PricingCards.mdx
@@ -520,6 +520,7 @@ Use `PricingCards.FeatureListItem` with `variant="included"` and `variant="exclu
 | :--------- | :------------------ | :-------: | :------: | :---------------------------------- |
 | `as`       | `section , div`     | `section` | `false`  | Applies the underlying HTML element |
 | `children` | `PricingCards.Item` |           |  `true`  | Applies the underlying HTML element |
+| `presentation` | `default, cards` |           |  `false`  | The presentation styling |
 
 ### PricingCards.Item <Label>Required</Label>
 
