Update price format with currency code

--- a/apps/docs/content/components/PricingCards.mdx
+++ b/apps/docs/content/components/PricingCards.mdx
@@ -685,12 +685,12 @@ One item per pricing plan to be displayed. Maximum of 3 items.
 
 ### PricingCards.Price
 
-| Name                     | Type                |   Default   | required | Description                         |
-| :----------------------- | :------------------ | :---------: | :------: | :---------------------------------- |
-| `children`               | `ReactNode`         | `undefined` |  `true`  | The price of the item               |
-| `currencySymbol`         | `string`            |     `$`     | `false`  | The currency symbol                 |
-| `currencySymbolPosition` | `leading, trailing` |  `leading`  | `false`  | The position of the currency symbol |
-| `trailingText`           | `string`            |             | `false`  | The trailing text                   |
+| Name             | Type        |   Default   | required | Description           |
+| :--------------- | :---------- | :---------: | :------: | :-------------------- |
+| `children`       | `ReactNode` | `undefined` |  `true`  | The price of the item |
+| `currencyCode`   | `string`    |    `USD`    | `false`  | The currency code     |
+| `currencySymbol` | `string`    |     `$`     | `false`  | The currency symbol   |
+| `trailingText`   | `string`    |             | `false`  | The trailing text     |
 
 ### PricingCards.FeatureList
 
